--- a/css/menu-lateral.css
+++ b/css/menu-lateral.css
@@ -59,12 +59,19 @@ body {
     position: fixed;
     top: 48px; /* Height of navbar */
     bottom: 0;
-    left: 0;
+    right: 100%;
     width: 35%;
     overflow-y: auto;
     transition-timing-function: ease-in-out;
     transition-duration: .3s;
     transition-property: right, visibility;
+  }
+  .menu-lateral.open {
+    right: 65%;
+    visibility: visible;
+  }
+  #menu-sair{
+    height:56px;
   }
 }
 @media (min-width: 744px) and (max-width: 991px) {
