--- a/css/menu-lateral.css
+++ b/css/menu-lateral.css
@@ -6,7 +6,29 @@ html {
 html,
 body {
   overflow-x: hidden;
-  overflow-y: hidden;
+  overflow-y: auto;
+}
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+  -webkit-border-radius: 16px;
+}
+
+::-webkit-scrollbar-track-piece {
+  background-color: #ffffff;
+  -webkit-border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:vertical {
+  height: 3px;
+  background-color: #666;
+  -webkit-border-radius: 2px;
+}
+
+::-webkit-scrollbar-thumb:horizontal {
+  width: 3px;
+  background-color: #666;
+  -webkit-border-radius: 3px;
 }
   #sair:hover{
     text-decoration:none;
