--- a/includes/menu.html
+++ b/includes/menu.html
@@ -1,91 +1,56 @@
-<style>
-  .navbar-header{
-    width: 96%;
-    margin-left: 2%;
-    margin-right: 2%;
-  }
-  .navbar-body{
-    width: 96%;
-    display: inline-block;
-    padding: 0;
-    margin-left: 2%;
-    margin-right: 2%;
-  }
-  .menu{
-    margin-bottom: 0;
-    padding: 0px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .menu-item{
-    display: inline-block;
-    margin: 0;
-    margin-right: 1%;
-    padding: 10px;
-  }
-  .menu-item:hover{
-     border-bottom: green 1px solid;
-  }
-  .menu-link{
-    padding: 0;
-    color: #fff;
-    text-decoration: none;
-  }
-  .active{
-    font-weight: bold;
-    border-bottom: green 1px solid;
-  }
-  .menu-link:hover{
-    text-decoration: none;
-    color: #fff;
-  }
-  .bg-green{
-    background-color: #006633;
-  }
-  .form-right{
-    float: right;
-  }
-</style>
-<nav class="navbar fixed-top navbar-dark bg-green p-0 pt-1">
-  <div class="navbar-header">
-    <a class="navbar-brand" href="#">ETEC DE ITANHAÉM</a>
-    <form class="form-right form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+<div class="login">
+  <div id="redes-sociais">
+    <a href="https://www.facebook.com/etecdeitanhaem" id="face"><i class="fab fa-facebook-square"></i></a>
+    <a href="http://bibliotecaetecdeitanhaem.blogspot.com" id="blog"><i class="fab fa-blogger"></i></a>
   </div>
-  <div class="navbar-body ">
-    <ul class="menu">
-      <li class="menu-item active">
-        <a class="menu-link" href="#">Home</a>
-      </li>
-      <li class="menu-item">
-        <a class="menu-link" href="#">A escola</a>
-      </li>
-      <li class="menu-item">
-        <a class="menu-link" href="#">Eventos</a>
-      </li>
-      <li class="menu-item">
-        <a class="menu-link" href="#">Cursos</a>
-      </li>
-      <li class="menu-item">
-        <a class="menu-link" href="#">Vestibulinho</a>
-      </li>
-      <li class="menu-item">
-        <a class="menu-link" href="#">Corpo docente</a>
-      </li>
-      <li class="menu-item">
-        <a class="menu-link" href="#">Coordenação</a>
-      </li>
-      <li class="menu-item">
-        <a class="menu-link" href="#">Direção</a>
-      </li>
-      <li class="menu-item">
-        <a class="menu-link" href="#">Secretaria</a>
-      </li>
-      <li class="menu-item">
-        <a class="menu-link" href="#">TCC</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+  <label id="endereco">Endereço: Av.José Batista Campos, 1431 - Anchieta - Itanhaém/SP - Tel (13)3426-4926</label>
+  <a href="login.php" id="logar">Login</a>
+</div>
+<nav class="navbar navbar-dark bg-green p-0 pt-1">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">ETEC DE ITANHAÉM</a>
+      <div class="form-row form-right">
+        <div class="form-group col-6">
+          <input class="form-control" type="search" placeholder="Search">
+        </div>
+        <div class="form-group col-2">
+         <button class="btn" type="submit">Search</button>
+        </div>
+      </div>
+    </div>
+    <div class="navbar-body">
+      <ul class="menu">
+        <li class="menu-item active">
+          <a class="menu-link" href="#">Home</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-link" href="#">A escola</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-link" href="#">Eventos</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-link" href="#">Cursos</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-link" href="#">Vestibulinho</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-link" href="#">Corpo docente</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-link" href="#">Coordenação</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-link" href="#">Direção</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-link" href="#">Secretaria</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-link" href="#">TCC</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
