--- a/includes/menu.html
+++ b/includes/menu.html
@@ -3,19 +3,12 @@
     <a href="https://www.facebook.com/etecdeitanhaem" id="face"><i class="fab fa-facebook-square"></i></a>
     <a href="http://bibliotecaetecdeitanhaem.blogspot.com" id="blog"><i class="fab fa-blogger"></i></a>
   </div>
-  <label id="endereco">Endereço: Av.José Batista Campos, 1431 - Anchieta - Itanhaém/SP - Tel (13)3426-4926</label>
+  <marquee id="endereco">Endereço: Av.José Batista Campos, 1431 - Anchieta - Itanhaém/SP - Tel (13)3426-4926</marquee>
   <a href="login.php" id="logar">Login</a>
 </div>
 <nav class="navbar navbar-dark bg-green p-0 pt-1">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">ETEC DE ITANHAÉM</a>
-      <div class="form-row form-right">
-        <div class="form-group col-6">
-          <input class="form-control" type="search" placeholder="Search">
-        </div>
-        <div class="form-group col-2">
-         <button class="btn" type="submit">Search</button>
-        </div>
       </div>
     </div>
     <div class="navbar-body">
