--- a/css/menu.css
+++ b/css/menu.css
@@ -136,6 +136,7 @@
     #logar:hover{
       background-color: #1e7e34;
       color: #fff !important;
+      text-decoration: none;
     }
     #redes-sociais{
       float: left;
@@ -151,9 +152,9 @@
       margin-left: 10px;
     }
     #endereco{
-      width: auto;
+      width: 85%;
       height: auto;
-      margin-left: 20%;
+      margin-left: 1%;
       padding-top: 5px;
       font-size: 1em;
       text-align: center;
