--- a/css/info.css
+++ b/css/info.css
@@ -4,7 +4,7 @@ body{
 	font-family: sans-serif;
 }
 
-.container{
+.container-info{
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -14,7 +14,7 @@ body{
 	display: flex;
 }
 
-.container .box{
+.container-info .box{
 	position: relative;
 	width: 250px;
 	height: 500px;
@@ -22,29 +22,29 @@ body{
 	transition: 0.5s;
 }
 
-.container .box:hover{
+.container-info .box:hover{
 	transform: scale(1.1);
 	z-index: 1;
 	box-shadow: 0 5px 20px rgba(0,0,0,1);
 }
 
-.container .box .thumb{
+.container-info .box .thumb{
 	position: absolute;
 	width: 100%;
 	height: 250px;
 	overflow: hidden;
 }
 
-.container .box:nth-child(odd) .thumb{
+.container-info .box:nth-child(odd) .thumb{
 	bottom: 0;
 	left: 0;
 }
 
-.container .box .thumb img{
+.container-info .box .thumb img{
 	width: 100%;
 }
 
-.container .box .detalhes{
+.container-info .box .detalhes{
 	position: absolute;
 	width: 100%;
 	height: 250px;
@@ -52,28 +52,28 @@ body{
 	background: #262626;
 }
 
-.container .box:nth-child(even) .detalhes{
+.container-info .box:nth-child(even) .detalhes{
 	bottom: 0;
 	left: 0;
 }
 
-.container .box:nth-child(1) .detalhes{
-	background: #004000;
-}
-
-.container .box:nth-child(2) .detalhes{
+.container-info .box:nth-child(1) .detalhes{
 	background: dark;
 }
 
-.container .box:nth-child(3) .detalhes{
-	background: #024102;
+.container-info .box:nth-child(2) .detalhes{
+	background: dark;
 }
 
-.container .box:nth-child(4) .detalhes{
-	background: #004000;
+.container-info .box:nth-child(3) .detalhes{
+	background: dark;
 }
 
-.container .box .detalhes .content{
+.container-info .box:nth-child(4) .detalhes{
+	background: dark;
+}
+
+.container-info .box .detalhes .content{
 	position: absolute;
 	top: calc(50% + 16px);
 	transform: translateY(-50%);
@@ -84,23 +84,23 @@ body{
 	transition: 0.5s;
 }
 
-.container .box:hover .detalhes .content{
+.container-info .box:hover .detalhes .content{
 	top: calc(50%);
 }
 
-.container .box .detalhes .content .fa{
+.container-info .box .detalhes .content .fa{
 	font-size: 80px;
 	color: #fff;
 }
 
-.container .box .detalhes .content h3{
+.container-info .box .detalhes .content h3{
 	margin: 0;
 	padding: 0;
 	padding: 10px 0;
 	color: #fff;
 }
 
-.container .box .detalhes .content a{
+.container-info .box .detalhes .content a{
 	display: inline-block;
 	padding: 5px 20px;
 	color: #fff;
@@ -111,17 +111,17 @@ body{
 	transform: scale(0);
 }
 
-.container .box:hover .detalhes .content a{
+.container-info .box:hover .detalhes .content a{
 	transform: scale(1);
 }
 
-.container .box .detalhes .content a:hover{
+.container-info .box .detalhes .content a:hover{
 	background: #fff;
 	color: #262626;
 }
 
 @media (max-width: 1000px){
-	.container{
+	.container-info{
 		width: 100%;
 		height: auto;
 	}
