--- a/css/layout_form.css
+++ b/css/layout_form.css
@@ -156,7 +156,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 4.5%;
+    width: 50px;
     height: 100%;
     background-color: #006634;
     z-index: -1;
@@ -165,7 +165,7 @@
   @media (min-width: 992px) and (max-width: 1320px) {
     #container-form{
       position: fixed;
-      width: 65%;
+      width: 100%;
       height: 100%;
       right:0;
       z-index: -1000;
