--- a/includes/menu.html
+++ b/includes/menu.html
@@ -6,44 +6,82 @@
   <marquee id="endereco">Endereço: Av.José Batista Campos, 1431 - Anchieta - Itanhaém/SP - Tel (13)3426-4926</marquee>
   <a href="login.php" id="logar">Login</a>
 </div>
-<nav class="navbar navbar-dark bg-green p-0 pt-1">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">ETEC DE ITANHAÉM</a>
-      </div>
-    </div>
-    <div class="navbar-body">
-      <ul class="menu">
-        <li class="menu-item active">
-          <a class="menu-link" href="#">Home</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#">A escola</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#">Eventos</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#">Cursos</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#">Vestibulinho</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#">Corpo docente</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#">Coordenação</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#">Direção</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#">Secretaria</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#">TCC</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+<div class="fechar-menu-lateral"></div>
+<!-- Menu fixo -->
+<nav class="menu navbar-expand-lg navbar-dark bg-green">
+  <a class="navbar-brand font-weight-bold ml-auto ml-lg-3 float-left" href="#">Etec de Itanhaém</a>
+  <button class="navbar-toggler p-25 border-0 float-right " type="button" data-toggle="menu">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
+  <div class="navbar-collapse offcanvas-collapse float-right p-0 mr-2">
+    <ul class="navbar-nav mr-auto">
+      <a class="menu-link" href="index.php">
+        <li class="menu-item active">
+          <span>Home</span>
+        </li>
+        </a>
+        <li class="menu-item" data-dropdawn-toggle="menu-dropdown1">
+          <span>A escola</span>
+          <ul class="menu-dropdown-body bg-dark" id="menu-dropdown1" >
+            <a class="menu-dropdown-link" href="evento-publico.php">  
+              <li class="menu-dropdown-item">
+                <i class="fas fa-caret-right ml-0 mr-2"></i>Historico
+              </li>
+            </a>
+            <a class="menu-dropdown-link" href="evento-publico.php">  
+             <li class="menu-dropdown-item">
+                <i class="fas fa-caret-right ml-0 mr-2"></i>Historico
+              </li>
+            </a>
+            <a class="menu-dropdown-link" href="evento-publico.php">  
+              <li class="menu-dropdown-item">
+                <i class="fas fa-caret-right ml-0 mr-2"></i>Historico
+              </li>
+            </a>
+          </ul>
+        </li>
+        <a class="menu-link" href="#">
+         <li class="menu-item">
+           <span>Eventos</span>
+         </li>
+        </a>
+        <a class="menu-link" href="#">
+         <li class="menu-item">
+           <span>Cursos</span>
+         </li>
+        </a>
+        <a class="menu-link" href="#">
+         <li class="menu-item">
+           <span>Vestibulinho</span>
+         </li>
+        </a>
+        <a class="menu-link" href="#">
+         <li class="menu-item">
+           <span>Corpo docente</span>
+         </li>
+      </a>
+      <a class="menu-link" href="#">
+       <li class="menu-item">
+         <span>Coordenação</span>
+      </a>
+      <a class="menu-link" href="#">
+       </li>
+       <li class="menu-item">
+         <span>Direção</span>
+       </li>
+      </a>
+      <a class="menu-link" href="#">
+       <li class="menu-item">
+         <span>Secretaria</span>
+       </li>
+      </a>
+      <a class="menu-link" href="#">
+        <li class="menu-item">
+        <span>TCC</span>
+        </li>
+      </a>
+      <li class='' id="login"></li>
+    </ul>
+  </div>
+</nav>
