--- a/css/index.css
+++ b/css/index.css
@@ -27,6 +27,7 @@
   background-attachment: fixed;
   background-image: url(../imagens/etec-itanhaem.jpg);
   background-position: center center;
+  z-index: -1;
 }
 #fundo::after{
   content:'';
