--- a/eventos/css/cadastrar-eventos.css
+++ b/eventos/css/cadastrar-eventos.css
@@ -51,7 +51,7 @@
   color: #777;
 }
 .form-cad{
-  width: 50%;
+  width: 90%;
   padding: 2%;
   margin: auto;
   border-radius: 1%;
@@ -60,10 +60,18 @@
   display:none;
 }
 .cad-img{
-	width:90%;
+	width:60%;
 	height:auto;
 }
 .cad-bot{
 	width:90%;
 	height:auto;
+}
+@media(max-width: 572px){
+	.form-cad{
+	  width: 90%;
+	  padding: 2%;
+	  margin: auto;
+	  border-radius: 1%;
+	}
 }
