--- a/css/index.css
+++ b/css/index.css
@@ -46,12 +46,40 @@
   color:#000;
   border-bottom:2px solid #004000;
 }
-.swiper-container{
+.swiper-container {
   width: 100%;
+  height: 100%;
   padding-top: 0px;
   padding-bottom: 25px;
   background-color: #fff;
   margin-top:50px;
+}
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  width: auto;
+  height: 500px;
+  background: #aaaaaa;
+}
+.swiper-slide:nth-child(2n) {
+  width: 40%;
+}
+.swiper-slide:nth-child(3n) {
+  width: 20%;
 }
 .swiper-container h1{
   padding:0;
@@ -59,12 +87,6 @@
   font-family: sans-serif;
   font-size: 1.5em;
   color:#323232;
-}
-.swiper-slide {
-  background-position: center;
-  background-size: cover;
-  width: 250px;
-  height: 350px;
 }
 
 /*Media query para trablets*/
