--- a/css/painel.css
+++ b/css/painel.css
@@ -1,6 +1,7 @@
 		.container-user{
 			width: 90%;
 			padding: 0;
+			padding-top: 30px;
 			margin: auto;
 		}
 		.user{
@@ -11,7 +12,7 @@
 			text-align: center;
 			color: #fff;
 			font-weight: bold;
-			font-size: 1.3em;
+			font-size: 1.2em;
 		}
 		.title{
 			padding: 0;
@@ -24,14 +25,6 @@
 			font-size: 2em;
 		}
 
-		@media only screen and (min-width: 600px) {
-    		.container-user{
-				width: 80%;
-			}
-			.user{
-				width: 25%;
-			}
-		}
 		#alert{
             position: fixed;
             width: 50%;
@@ -44,6 +37,20 @@
             animation-name: alert;
             animation-duration: 4s;
         }
+
+		@media only screen and (min-width: 600px) {
+    		.container-user{
+				width: 80%;
+			}
+			.user{
+				width: 25%;
+			}
+			#alert{
+	            width: 90%;
+	            left: 5%;
+	            right: 5%;
+	        }
+		}
         @keyframes alert {
             0%{top: -10%;}
             10%{opacity: 1;}
