--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,14 @@
+html, body {
+  position: relative;
+  height: 100%;
+}
 #video{
   width:100%;
   height:300px;
   background-color:#343a40;
 }
 #noticia{
-  width:85%;
-  height:auto;
+  height: 400px;
 }
 #noticia-title{
   width:90%;
@@ -45,19 +48,16 @@
   padding-top:30px;
   color:#000;
   border-bottom:2px solid #004000;
+  margin-bottom: 10px;
 }
 .swiper-container {
   width: 100%;
   height: 100%;
-  padding-top: 0px;
-  padding-bottom: 25px;
-  background-color: #fff;
-  margin-top:50px;
 }
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
+  background: #ccc;
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
@@ -71,24 +71,8 @@
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
-  width: auto;
-  height: 500px;
-  background: #aaaaaa;
+  background-position: center center;
 }
-.swiper-slide:nth-child(2n) {
-  width: 40%;
-}
-.swiper-slide:nth-child(3n) {
-  width: 20%;
-}
-.swiper-container h1{
-  padding:0;
-  padding-left:20px;
-  font-family: sans-serif;
-  font-size: 1.5em;
-  color:#323232;
-}
-
 /*Media query para trablets*/
 @media (max-width: 991.9px) {
   #curso{
@@ -104,20 +88,4 @@
   .titulo{
     font-size: 1.5em;
   }
-  /*Swiper-pagination*/
-  .swiper-slide{
-    width: 80%;
-    height: 200px;
-  }
-
-  .swiper-container{
-    height: 500px;
-  }
-}
-
-/*Media query para celulares*/
-@media (max-width: 576px){
-p-sm-0{
-	padding:0;
-}
 }
