--- a/css/index.css
+++ b/css/index.css
@@ -73,6 +73,10 @@ html, body {
   align-items: center;
   background-position: center center;
 }
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
+}
 /*Media query para trablets*/
 @media (max-width: 991.9px) {
   #curso{
