--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@ html, body {
   background-color:#343a40;
 }
 #noticia{
-  height: 400px;
+  height: 500px;
 }
 #noticia-title{
   width:90%;
@@ -53,6 +53,10 @@ html, body {
 .swiper-container {
   width: 100%;
   height: 100%;
+}
+
+.swiper-wrapper {
+  height: 400px;
 }
 .swiper-slide {
   text-align: center;
