--- a/css/info.css
+++ b/css/info.css
@@ -4,12 +4,12 @@ body{
 	font-family: sans-serif;
 }
 #info{
-    position: relative;;
+    position: relative;
     width: 100%;
     height: 550px;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: -1;
 }
 .container-info{
 	position: absolute;
