--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@ html, body {
 }
 #noticia{
   height: 500px;
+  padding: 0;
 }
 #noticia-title{
   width:90%;
@@ -50,36 +51,8 @@ html, body {
   border-bottom:2px solid #004000;
   margin-bottom: 10px;
 }
-.swiper-container {
-  width: 100%;
-  height: 100%;
-}
-
-.swiper-wrapper {
-  height: 400px;
-}
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #ccc;
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-  background-position: center center;
-}
 .mx-auto{
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
 }
 /*Media query para trablets*/
 @media (max-width: 991.9px) {
