--- a/css/layout_form.css
+++ b/css/layout_form.css
@@ -1,5 +1,5 @@
 #container-form{
-    position: fixed;
+    position: relative;
     width: 100%;
     height: 100%;
     right:0;
@@ -25,6 +25,14 @@
     border: 1px #006634 solid;
     overflow: auto;
     overflow-x: hidden;
+  }
+
+  .fale-conosco{
+    position: relative;
+    width: 70%;
+    height: auto;
+    background-color: #CCC;
+    border-radius: 3em;
   }
 
   .btn-nome{
