--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,8 @@
+
 html, body {
   position: relative;
   height: 100%;
+  font-family: 'Abel', sans-serif;
 }
 #video{
   width:100%;
@@ -8,8 +10,9 @@ html, body {
   background-color:#343a40;
 }
 #noticia{
-  height: 500px;
+  height: 400px;
   padding: 0;
+  background-color: #ccc;
 }
 #noticia-title{
   width:90%;
@@ -42,7 +45,13 @@ html, body {
   left:0;
   background-color: rgba(0,0,0,0.8);
   min-height: 80vh;
-}   
+}  
+#fale{
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
+} 
 .content-title{
   width:90%;
   height:100px;
