--- a/css/layout_form.css
+++ b/css/layout_form.css
@@ -1,5 +1,5 @@
 #container-form{
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 100%;
     right:0;
@@ -25,14 +25,6 @@
     border: 1px #006634 solid;
     overflow: auto;
     overflow-x: hidden;
-  }
-
-  .fale-conosco{
-    position: relative;
-    width: 70%;
-    height: auto;
-    background-color: #CCC;
-    border-radius: 3em;
   }
 
   .btn-nome{
@@ -63,6 +55,13 @@
     transform: skew(-60deg);
     z-index: -1;
     filter: opacity(0.4);
+  }
+
+  .container-skew{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
   }
   /* Mts */
   .mt-5{
@@ -154,10 +153,10 @@
   }
   /*Mls*/
   .ml-6{
-    margin-left: 4rem !important;
+    margin-left: 3.4rem !important;
   }
   .ml-7{
-    margin-left: 6rem !important;
+    margin-left: 4.9rem !important;
   }
   /*Colunas-verdes*/
   .coluna-verde{
