--- a/css/layout_form.css
+++ b/css/layout_form.css
@@ -1,12 +1,12 @@
 #container-form{
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: auto;
     right:0;
     z-index: 0;
   }
 #container-table{
-	  position: relative;
+	position: relative;
     width: 80%;
     height: 100%;
     z-index: 0;
@@ -18,7 +18,7 @@
   .jumbotron{
     background-color: #DFDFDF;
     width: 60%;
-    height: 650px;
+    height: auto;
     margin-top: 100px;
     padding:0px;
     color: #000;
