--- a/css/layout_form.css
+++ b/css/layout_form.css
@@ -1,57 +1,11 @@
-#container-form{
-    position: absolute;
-    width: 100%;
-    height: auto;
-    right:0;
-    z-index: 0;
-  }
-#container-table{
-	position: relative;
-    width: 80%;
-    height: 100%;
-    z-index: 0;
-    margin-top: 56px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .jumbotron{
-    background-color: #DFDFDF;
-    width: 60%;
-    height: auto;
-    margin-top: 100px;
-    padding:0px;
-    color: #000;
-    border: 1px #006634 solid;
-    overflow: auto;
-    overflow-x: hidden;
-  }
-
-  .btn-nome{
-    width: 100%;
-    background-color: #BBB5B5;
-  }
-
-  .btn-nome:hover{
-    background-color: white;
-  }
-
-  .btn-cadastrar{
-    width: 100%;
-    background-color: #BBB5B5;
-  }
-
-  .btn-cadastrar:hover{
-    background-color: white;
-  }
-  /* Skew do fundo da página*/
+/* Skew do fundo da página*/
   .skewed-gray{
     position: absolute;
     top: 9%;
     right: 4.5%;
     width: 3%;
     height: 15%;
-    background-color: gray;
+    background-color: #000;
     transform: skew(-60deg);
     z-index: -1;
     filter: opacity(0.4);
@@ -170,26 +124,6 @@
   }
 
   @media (min-width: 992px) and (max-width: 1320px) {
-    #container-form{
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      right:0;
-      z-index: -1000;
-    }
-    #container-table{
-      width: 65%;
-      height: 100%;
-    }
-    .jumbotron{
-      background-color: #DFDFDF;
-      width: 80%;
-      height: 450px;
-      margin-top: 200px;
-      border-radius: 1rem;
-      color: #006634;
-      border: 1px #006634 solid;
-    }
     .coluna-verde{
       position: absolute;
       top: 0;
@@ -200,49 +134,8 @@
       z-index: -1;
     }
   }
-  @media (min-width: 768px) and (max-width: 991.98px) {
-    #container-form{
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      right:0;
-      z-index: -1000;
-    }
-    #container-table{
-      width: 100%;
-      height: 100%;
-    }
-    .jumbotron{
-      background-color: #DFDFDF;
-      width: 80%;
-      height: 450px;
-      margin-top: 200px;
-      border-radius: 1rem;
-      color: #006634;
-      border: 1px #006634 solid;
-    }
-  }
+  
   @media (max-width: 768px) and (min-width: 560px) {
-    #container-form{
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      right:0;
-      z-index: -1000;
-    }
-    #container-table{
-      width: 100%;
-      height: 100%;
-    }
-    .jumbotron{
-      background-color: #DFDFDF;
-      width: 90%;
-      height: 450px;
-      margin-top: 100px;
-      border-radius: 1rem;
-      color: #006634;
-      border: 1px #006634 solid;
-    }
     .coluna-verde{
       position: absolute;
       top: 0;
@@ -254,26 +147,6 @@
     }
   }
   @media (max-width: 560px){
-    #container-form{
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      right:0;
-      z-index: -1000;
-    }
-    #container-table{
-      width: 100%;
-      height: 100%;
-    }
-    .jumbotron{
-      background-color: #DFDFDF;
-      width: 98%;
-      height: 450px;
-      margin-top: 100px;
-      border-radius: 1rem;
-      color: #006634;
-      border: 1px #006634 solid;
-    }
     .coluna-verde{
       position: absolute;
       top: 0;
