--- a/css/index.css
+++ b/css/index.css
@@ -29,10 +29,10 @@ html, body {
 }
 #fundo{
   position:relative;
-  min-height: 80vh;
+  min-height: 86vh;
   background-size:cover;
   background-attachment: fixed;
-  background-image: url(../imagens/etec-itanhaem.jpg);
+  background-image: url(../imagens/etec_itanhaem.jpg);
   background-position: center center;
   z-index: -1;
 }
