--- a/css/menu.css
+++ b/css/menu.css
@@ -168,8 +168,12 @@
       width:100%;
       height:auto;
       padding:10px 5px;
-      border-bottom: solid 1px #f8f9fa;
-      background-color: #B0B0B0;
+      border-bottom: solid 1px #000;
+      background-color: white;
+    }
+
+    .menu-dropdown-item:hover{
+      background-color: #C2C2C2;
     }
     /*Css dos links dos itens que estão em dropdawn*/
     .menu-dropdown-link{
@@ -178,7 +182,7 @@
       display:block;
       text-decoration:none;
       list-style:none;
-      color:#f5f5f5 !important ;
+      color: #000 !important ;
     }
     /*Resetando o hover dos links*/
     a:hover{
@@ -191,7 +195,7 @@
       display: none;
       min-width: 200px;
       padding: 0;
-      border-radius: 0.5em;
+      border-radius: 0.1em;
       z-index: 3000;
       overflow: hidden;
     }
