--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@ html, body {
   height: 100%;
   font-family: 'Abel', sans-serif;
 }
+
 #video{
   width:100%;
   height:300px;
@@ -53,10 +54,11 @@ html, body {
   z-index: 10;
 } 
 .content-title{
-  width:90%;
+  width:100%;
   height:100px;
   padding-top:30px;
-  color:#000;
+  background-color: #004000;
+  color: white;
   border-bottom:2px solid #004000;
   margin-bottom: 10px;
 }
